# aruco-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  aruco_tracker  manifest.xml
configs/: acA1920-155um_23088639.pfs  acA2000-165um_21762375.pfs  blender.json  config.json  fake.json  intrinsics.json  tracker.json
dataset/: detected.json  parameters.json
scripts/: aruco_board.py  detect_aruco.py  draw_found_markers.py  edges_fitting.py  estimate_markers_relative_positions.py  gen_aruco_svg.py  homogeneous_transformations.py  image_diff.py  listener.py  log_parser.py  pnp.py  refine_line.py  reproject_points.py  run_dataset.py  test.py  test2.py  test3.py  test_lines_refinement.py  test_markers_dist.py  tmp.py  transform_coordinates.py  video_to_images.py
src/: aruco_detector.cpp  aruco_detector.h  aruco_detector_main.cpp  aruco_tracker.cpp  aruco_tracker_main.cpp  camera.cpp  camera.h  camera_basler1300_200uc.cpp  camera_basler_usb.cpp  camera_fake.cpp  camera_parameters.h  common.cpp  cv_helpers.cpp  cvmath.h  edges_fitting.h  fminbound.h  image_saver.h  imgdump.cpp  imgdump.h  json_cvmat.h  json_formatter.h  json_loaders.cpp  json_loaders.h  jsonxx.h  main_camera.cpp  markers.h  parse_args.h  pnp_4pts.cpp  pnp_4pts.h  publisher.cpp  publisher.h  publisher_file.cpp  publisher_jsontcp.cpp  quat.h  recorder.cpp  rotations.h  traces.cpp  traces.h  tracker.cpp  transforms.h
src/aruco/: aruco_detector.cpp  aruco_detector.h
src/backup/: common.cpp  common.h  cv_helpers.h  cv_parallel.h  image_saver.cpp  jsonxx.cpp  traces.h
src/camera/: camera.h
src/misc/: containers.h  files.h  filters.h  formatting.h  json.h  signals.cpp  signals.h  splines.h  threads.h  time.h  traces.cpp  traces.h
src/mmath/: stdalg.h  transforms.h
src/tests/: test_refine.cpp
tests/: CMakeLists.txt  test_local_autocontrast.cpp  test_rotations.cpp
